a5-ec2-instance.tf
# EC2 Instance
resource "aws_instance" "semiramis2vm" {
  ami = data.aws_ami.this.id
  instance_type = var.instance_type
  user_data = file("${path.module}/webapp-userdata-instance.sh")
  key_name = var.instance_keypair
  vpc_security_group_ids = [ aws_security_group.vpc-ssh.id, aws_security_group.vpc-web.id, aws_security_group.vpc-redis.id ]
  tags = {
    "Name" = "Semiramis Instance"
  }
}
